<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="sign_in_toolbar_text">Sing In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Photos">Photos</string>
    <string name="change_language">Change language</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_account_button_text">Edit account</string>

</resources>